Added about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,13 @@
 				</ul>
 
 				<ul>
+					<li class="nav-item top-level {% if page.url == '/about' %}current{% endif %}">
+						{% assign home = site.html_pages | where: 'url', '/about' | first %}
+						<a href="{{ site.baseurl }}/about">{{ about.title }}</a>
+					</li>
+				</ul>
+
+				<ul>
 					{% assign grouped = site.docs | group_by: 'category' %}
 					{% for group in grouped %}
 						<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
