--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 					
 					<li class="nav-item top-level {% if page.url == '/about' %}current{% endif %}">
 						{% assign about = site.html_pages | where: 'url', '/about' | first %}
-						<a href="{{ site.baseurl }}/about">{{ about.title }}</a>
+						<a href="{{ site.baseurl }}/about">About</a>
 					</li>
 				</ul>
 
