--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	<body>
 		<header>
 			<h1>
-				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/emblem.svg" width="40" height="40" alt="{{ site.title }} logo"></a>
+				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/favicon.png" width="40" height="40" alt="{{ site.title }} logo"></a>
 				{{ site.title }}
 				<button type="button" class="open-nav" id="open-nav"></button>
 			</h1>
@@ -52,6 +52,13 @@
 				</ul>
 
 				<ul>
+					<li class="nav-item top-level {% if page.url == '/blog/' %}current{% endif %}">
+						{% assign blog = site.html_pages | where: 'url', '/blog/' | first %}
+						<a href="{{ site.baseurl }}/blog/">{{ blog.title }}</a>
+					</li>
+				</ul>
+
+				<ul>
 					{% assign grouped = site.docs | group_by: 'category' %}
 					{% for group in grouped %}
 						<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
@@ -66,12 +73,7 @@
 					{% endfor %}
 				</ul>
 
-				<ul>
-					<li class="nav-item top-level {% if page.url == '/blog/' %}current{% endif %}">
-						{% assign blog = site.html_pages | where: 'url', '/blog/' | first %}
-						<a href="{{ site.baseurl }}/blog/">{{ blog.title }}</a>
-					</li>
-				</ul>
+				
 			</nav>
 		</header>
 
