--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,10 @@
 	<body>
 		<header>
 			<h1>
-				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/4.png" width="120" height="60" alt="{{ site.title }} logo"></a>
+				<div style="width:200px;height:70px;overflow:hidden">
+					<img src="{{ site.baseurl }}/images/4.png" />
+				</div>
+				
 			</h1>
 
 			<form action="{{ site.baseurl }}/search/" method="get">
